# specs/api-docs.yaml
@@ -75,16 +75,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Hand'
-  /game/blackjack:
+  /game/blackjak:
     post:
-      operationId: postGameBlackjack
+      operationId: postGameBlackjak
       requestBody:
+        description: List of player IDs
         content:
           application/json:
             schema:
               type: array
+              minItems: 1
               items:
                 type: string
+            example:
+            - player1
         required: false
       responses:
         '200':
